[tool.poetry]
name = "django-pgtree"
version = "0.1.2"
description = "Heirachial data for Django with Postgres."
authors = ["Adam Brenecki"]
license = "ISC"

[tool.poetry.dependencies]
python = ">=3.4"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
